--- a/.mdly/lorem-ipsum/index.html
+++ b/.mdly/lorem-ipsum/index.html
@@ -12,7 +12,7 @@
 
      
     <style>
-      @import url('https://use.typekit.net/joe8rol.css');
+      /* @import url('https://use.typekit.net/joe8rol.css'); */
 
 :root {
   --color-background: #111;
@@ -29,6 +29,12 @@ body {
   min-height: 100vh;
   display: grid;
   grid-auto-rows: auto 1fr auto;
+}
+
+.app__header {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
 }
 
 /* Logo */
@@ -53,6 +59,12 @@ body {
 .app__logo--cursor::after {
   content: '_';
   animation: blink 1s ease-in-out infinite alternate;
+}
+
+.app__message {
+  font-family: 'lores-12', sans-serif;
+  font-size: 1.3rem;
+  font-style: normal;
 }
 
 /* Page Heading */
@@ -85,7 +97,7 @@ body {
 /* Footer */
 .app__footer {
   font-family: 'lores-12', sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   font-style: normal;
   font-weight: 400;
   padding-top: var(--margin);
@@ -93,11 +105,6 @@ body {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
-}
-
-.app__footer__barcode {
-  fill: currentColor;
-  height: 6em;
 }
 
 @keyframes shift {
@@ -150,7 +157,7 @@ body {
   </head>
 
   <body>
-    <header data-scope="header">
+    <header class="app__header" data-scope="header">
       <a href="/">
         <span class="app__logo app__logo--triangle">&triangle;</span>
         <span class="app__logo app__logo--cursor"></span>
@@ -200,61 +207,60 @@ body {
 </code></pre></main>
 
     <footer class="app__footer" data-scope="footer">
+      <span class="app__message" data-message></span>
+
       <span class="copywright">
         © 2023, fnhipster
       </span>
-
-      <svg
-        class="app__footer__barcode"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 225 111.54"
-      >
-        <rect x="19" width="2" height="100" />
-        <rect x="23" width="2" height="100" />
-        <rect x="31" width="2" height="80" />
-        <rect x="33" width="2" height="80" />
-        <rect x="37" width="2" height="80" />
-        <rect x="45" width="2" height="80" />
-        <rect x="47" width="2" height="80" />
-        <rect x="51" width="2" height="80" />
-        <rect x="57" width="2" height="80" />
-        <rect x="59" width="2" height="80" />
-        <rect x="65" width="2" height="80" />
-        <rect x="73" width="2" height="80" />
-        <rect x="75" width="2" height="80" />
-        <rect x="79" width="2" height="80" />
-        <rect x="87" width="2" height="80" />
-        <rect x="89" width="2" height="80" />
-        <rect x="93" width="2" height="80" />
-        <rect x="99" width="2" height="80" />
-        <rect x="101" width="2" height="80" />
-        <rect x="107" width="2" height="80" />
-        <rect x="111" width="2" height="100" />
-        <rect x="115" width="2" height="100" />
-        <rect x="119" width="2" height="80" />
-        <rect x="121" width="2" height="80" />
-        <rect x="123" width="2" height="80" />
-        <rect x="129" width="2" height="80" />
-        <rect x="133" width="2" height="80" />
-        <rect x="135" width="2" height="80" />
-        <rect x="137" width="2" height="80" />
-        <rect x="143" width="2" height="80" />
-        <rect x="219" width="2" height="80" />
-        <rect x="223" width="2" height="80" />
-        <text transform="translate(0 100)"><tspan x="0" y="0">0</tspan></text>
-        <text transform="translate(37 100)">
-          <tspan x="0" y="0">01001</tspan>
-        </text>
-        <text transform="translate(127 100)">
-          <tspan x="0" y="0">00</tspan>
-        </text>
-      </svg>
     </footer>
 
      
     <script type="module">
       const initializers = [];
-initializers.push(function init() {}
+initializers.push(function init() {
+  loadAdobeFonts('joe8rol');
+  loadBinaryMessage();
+
+  function loadAdobeFonts(id) {
+    const $link = document.createElement('link');
+    $link.rel = 'stylesheet';
+    $link.href = `https://use.typekit.net/${id}.css`;
+
+    document.head.insertBefore(
+      $link,
+      document.head.childNodes[document.head.childNodes.length - 1].nextSibling
+    );
+  }
+
+  function loadBinaryMessage() {
+    const string = 'True Love Will Find You in the End';
+
+    const binary = string
+      .split('')
+      .map((char) => char.charCodeAt(0).toString(2).padStart(8, '0'));
+
+    binary.push('0x03');
+
+    const $message = document.querySelector('[data-message]');
+
+    let current = Number(localStorage.getItem('message-index')) ?? 0;
+
+    $message.textContent = binary[current];
+
+    const interval = setInterval(() => {
+      $message.textContent = binary[current];
+
+      current++;
+
+      if (current === binary.length) {
+        clearInterval(interval);
+        current = 0;
+      }
+
+      localStorage.setItem('message-index', current);
+    }, 2000);
+  }
+}
 );
 const scope = document.querySelectorAll(`[data-scope]`)[0];
 
