--- a/.mdly/index/index.html
+++ b/.mdly/index/index.html
@@ -182,19 +182,7 @@ body {
     <script type="module">
       const initializers = [];
 initializers.push(function init() {
-  loadAdobeFonts('joe8rol');
   loadBinaryMessage();
-
-  function loadAdobeFonts(id) {
-    const $link = document.createElement('link');
-    $link.rel = 'stylesheet';
-    $link.href = `https://use.typekit.net/${id}.css`;
-
-    document.head.insertBefore(
-      $link,
-      document.head.childNodes[document.head.childNodes.length - 1].nextSibling
-    );
-  }
 
   function loadBinaryMessage() {
     const string = 'True Love Will Find You in the End';
@@ -262,6 +250,13 @@ initializers?.forEach?.((_init) => {
 });
 
     </script>
-    
+
+     
+
+    <script
+      async
+      src="https://use.typekit.net/joe8rol.js"
+      onload="Typekit.load({ kitId: 'joe8rol'});"
+    ></script>
   </body>
 </html>
