--- a/.mdly/lorem-ipsum/index.html
+++ b/.mdly/lorem-ipsum/index.html
@@ -169,6 +169,7 @@ body {
 <p>This is an example of a Markdown document that includes various elements</p>
 <hr/>
 <p><img src="/assets/placeholder.960x960.webp" srcset="/assets/placeholder.480x480.webp 480w, /assets/placeholder.640x640.webp 800w, /assets/placeholder.960x960.webp 1200w" alt="Eager Image" title="" width="960" height="960" /></p>
+<h1>Heading 1</h1>
 <h2>Heading 2</h2>
 <h3>Heading 3</h3>
 <h4>Heading 4</h4>
@@ -178,7 +179,7 @@ body {
 <p>You can make text <strong>bold</strong> by using double asterisks or double underscores: <code>**bold**</code> or <code>__bold__</code>.</p>
 <p>You can make text <em>italic</em> by using single asterisks or single underscores: <code>*italic*</code> or <code>_italic_</code>.</p>
 <p>You can create a <code>inline code</code> by wrapping the text with backticks: `inline code`.</p>
-<p><img src="/assets/placeholder.960x600.webp" srcset="/assets/placeholder.480x300.webp 480w, /assets/placeholder.640x400.webp 800w, /assets/placeholder.960x600.webp 1200w" alt="Lazy Image" title="" width="960" height="600" loading="lazy" /></p>
+<p><img src="/assets/placeholder.960x300.webp" srcset="/assets/placeholder.480x150.webp 480w, /assets/placeholder.640x200.webp 800w, /assets/placeholder.960x300.webp 1200w" alt="Lazy Image" title="" width="960" height="300" loading="lazy" /></p>
 <h2>Lists</h2>
 <p>You can create an unordered list using asterisks, plus signs, or hyphens:</p>
 <ul>
