--- a/.mdly/lorem-ipsum/index.html
+++ b/.mdly/lorem-ipsum/index.html
@@ -11,55 +11,46 @@
 
   <link rel="stylesheet" href="/assets/styles/base.css" />
 
-   
+  
+  
   <style>
-    /* @import url('https://use.typekit.net/joe8rol.css'); */
-
-:root {
-  --color-background: #111;
-  --color-text: #ffa500;
-}
-
-/* Layout */
-body {
-  padding-top: var(--margin);
-  padding-bottom: var(--margin);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-  min-height: 100vh;
-  display: grid;
-  grid-auto-rows: auto 1fr auto;
-}
-
-.app__header {
-  display: grid;
-  grid-template-columns: 1fr auto;
+    .app__header {
   align-items: center;
 }
 
 /* Logo */
 .app__logo {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 3rem;
   text-shadow: 0 0 3em currentColor;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   font-weight: bold;
   transition: text-shadow 0.3s ease-in-out;
 }
 
-.app__logo:hover {
-  text-shadow: 0 0 2em currentColor;
+a.app__logo {
+  text-decoration: none;
 }
 
-.app__logo--triangle {
+a.app__logo:hover {
+  outline: none;
+}
+
+a.app__logo:hover {
+  text-shadow: 0 0 1em currentColor;
+}
+
+.app__logo__triangle {
+  display: inline;
   position: relative;
   animation: shift 4s ease-in-out infinite alternate;
   transform: skewX(0deg);
   z-index: 1;
 }
 
-.app__logo--cursor::after {
-  content: '_';
+.app__logo__cursor {
+  display: inline;
   animation: blink 1s ease-in-out infinite alternate;
 }
 
@@ -81,9 +72,10 @@ body {
 
 .app__content > h1:first-of-type + p:has(+ hr) {
   font-family: 'lores-12', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
+  line-height: 1.2;
   margin: 0;
 }
 
@@ -160,9 +152,9 @@ body {
 
 <body>
   <header class="app__header" data-scope="header">
-    <a href="/">
-      <span class="app__logo app__logo--triangle">&triangle;</span>
-      <span class="app__logo app__logo--cursor"></span>
+    <a class="app__logo" href="/">
+      <span class="app__logo__triangle">&triangle;</span>
+      <span class="app__logo__cursor">_</span>
     </a>
   </header>
 
@@ -180,7 +172,7 @@ body {
 <p>You can make text <strong>bold</strong> by using double asterisks or double underscores: <code>**bold**</code> or <code>__bold__</code>.</p>
 <p>You can make text <em>italic</em> by using single asterisks or single underscores: <code>*italic*</code> or <code>_italic_</code>.</p>
 <p>You can create a <code>inline code</code> by wrapping the text with backticks: `inline code`.</p>
-<p><img src="/assets/placeholder.960x300.webp" srcset="/assets/placeholder.480x150.webp 480w, /assets/placeholder.640x200.webp 800w, /assets/placeholder.960x300.webp 1200w" alt="Lazy Image" title="" width="960" height="300" loading="lazy" /></p>
+<p><code>const hello = world</code></p>
 <h2>Lists</h2>
 <p>You can create an unordered list using asterisks, plus signs, or hyphens:</p>
 <ul>
@@ -199,6 +191,7 @@ body {
 <p>Here&#39;s an example: <a href="https://www.openai.com">OpenAI</a>.</p>
 <h2>Images</h2>
 <p>You can embed images using the following syntax: <code>![alt text](image URL)</code>.</p>
+<p><img src="/assets/placeholder.960x300.webp" srcset="/assets/placeholder.480x150.webp 480w, /assets/placeholder.640x200.webp 800w, /assets/placeholder.960x300.webp 1200w" alt="Lazy Image" title="" width="960" height="300" loading="lazy" /></p>
 <h2>Blockquotes</h2>
 <blockquote>
 <p>Markdown is a lightweight markup language for creating formatted text using a plain-text editor.</p>
@@ -217,7 +210,8 @@ body {
     </span>
   </footer>
 
-   
+  
+  
   <script type="module">
     const initializers = [];
 initializers.push(function init() {
