--- a/.mdly/lorem-ipsum/index.html
+++ b/.mdly/lorem-ipsum/index.html
@@ -87,6 +87,24 @@ a.app__logo:hover {
   width: 100%;
 }
 
+/* Images */
+.app__content__img {
+  position: relative;
+}
+
+.app__content__img > img {
+  position: relative;
+  z-index: 1;
+}
+
+.app__content__img > img + img {
+  position: absolute;
+  left: 0;
+  z-index: 0;
+  filter: blur(20px);
+  opacity: 0.75;
+}
+
 /* Footer */
 .app__footer {
   font-family: 'lores-12', sans-serif;
@@ -214,7 +232,26 @@ a.app__logo:hover {
   <script type="module">
     const initializers = [];
 initializers.push(function init() {
+  addImageGlow();
   loadBinaryMessage();
+
+  function addImageGlow() {
+    const $images = document.querySelectorAll('.app__content img');
+
+    $images.forEach(($image) => {
+      const $original = $image.cloneNode(true);
+
+      const $glow = $image.cloneNode(true);
+      $glow.setAttribute('aria-hidden', true);
+
+      const $wrapper = document.createElement('span');
+      $wrapper.classList.add('app__content__img');
+      $wrapper.appendChild($original);
+      $wrapper.appendChild($glow);
+
+      $image.replaceWith($wrapper);
+    });
+  }
 
   function loadBinaryMessage() {
     const string = 'True Love Will Find You in the End.';
