--- a/.mdly/index/index.html
+++ b/.mdly/index/index.html
@@ -72,7 +72,6 @@ a.app__logo:hover {
 
 .app__content > h1:first-of-type + p:has(+ hr) {
   font-family: 'lores-12', sans-serif;
-  font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.2;
@@ -86,6 +85,26 @@ a.app__logo:hover {
   max-width: 20rem;
   display: inline-block;
   width: 100%;
+}
+
+/* Images */
+.app__content__img {
+  position: relative;
+  display: inline-block;
+}
+
+.app__content__img > img {
+  position: relative;
+  z-index: 1;
+}
+
+.app__content__img > img + img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  filter: blur(20px);
+  opacity: 0.75;
 }
 
 /* Footer */
@@ -177,7 +196,26 @@ a.app__logo:hover {
   <script type="module">
     const initializers = [];
 initializers.push(function init() {
+  addImageGlow();
   loadBinaryMessage();
+
+  function addImageGlow() {
+    const $images = document.querySelectorAll('.app__content img');
+
+    $images.forEach(($image) => {
+      const $original = $image.cloneNode(true);
+
+      const $glow = $image.cloneNode(true);
+      $glow.setAttribute('aria-hidden', true);
+
+      const $wrapper = document.createElement('span');
+      $wrapper.classList.add('app__content__img');
+      $wrapper.appendChild($original);
+      $wrapper.appendChild($glow);
+
+      $image.replaceWith($wrapper);
+    });
+  }
 
   function loadBinaryMessage() {
     const string = 'True Love Will Find You in the End.';
