--- a/.mdly/index/index.html
+++ b/.mdly/index/index.html
@@ -103,7 +103,7 @@ a.app__logo:hover {
   display: block;
   top: 0;
   left: 0;
-  filter: blur(15px) opacity(0.75);
+  filter: blur(20px) opacity(0.4);
   transform: translate3d(0, 0, 0);
 }
 
@@ -178,8 +178,9 @@ a.app__logo:hover {
   </header>
 
   <main class="app__content" data-scope="content"><ul>
-<li><a href="/lorem-ipsum/">Lorem Ipsum</a></li>
-<li><a href="/playlist/hello-world/">Playlist</a></li>
+<li><a href="/haiku/hello-world">Hello World (Haiku) ✓</a></li>
+<li><a href="/playlist/0110/">0110 (Playlist)</a></li>
+<li><a href="/lorem-ipsum/">Lorem Ipsum (Post)</a></li>
 </ul>
 </main>
 
