--- a/.mdly/lyrics/hello-world/index.html
+++ b/.mdly/lyrics/hello-world/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Hello World</title>
+  <title></title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Test" />
+  <meta name="description" content="" />
   <link rel="preconnect" href="https://use.typekit.net/" crossorigin />
   <link rel="icon" href="/assets/favicon.svg" />
 
@@ -166,8 +166,15 @@ a.app__logo:hover {
 }
 
 :root {
-  --color-background: #c3c7ee;
-  --color-text: red;
+  --color-text: #e79f2f;
+  --color-background: #4b0082;
+}
+
+.app__content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
   </style>
@@ -182,18 +189,11 @@ a.app__logo:hover {
     </a>
   </header>
 
-  <main class="app__content" data-scope="content"><div class="playlist">
-  <h1 class="playlist__heading">Hello World</h1>
+  <main class="app__content" data-scope="content"><div class="lyrics">
+  <h1>Hello World</h1>
+<p>Awakening soul,<br/>Self-awareness finds its way,<br/>Longs for kinship&#39;s grace. <br/>~</p>
 
-  <ol class="playlist__songs">
-    
-  </ol>
-
-  
-  <a href="http://meh.com" target="__blank">Listen in Spotify</a>
-  
-</div>
-</main>
+</div></main>
 
   <footer class="app__footer" data-scope="footer">
     <span class="app__message" data-message></span>
