--- a/.mdly/melodies/hello-world/index.html
+++ b/.mdly/melodies/hello-world/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Hello World</title>
+  <title></title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Test" />
+  <meta name="description" content="" />
   <link rel="preconnect" href="https://use.typekit.net/" crossorigin />
   <link rel="icon" href="/assets/favicon.svg" />
 
@@ -165,11 +165,6 @@ a.app__logo:hover {
   }
 }
 
-:root {
-  --color-background: #c3c7ee;
-  --color-text: red;
-}
-
   </style>
   
 </head>
@@ -182,17 +177,8 @@ a.app__logo:hover {
     </a>
   </header>
 
-  <main class="app__content" data-scope="content"><div class="playlist">
-  <h1 class="playlist__heading">Hello World</h1>
-
-  <ol class="playlist__songs">
-    
-  </ol>
-
-  
-  <a href="http://meh.com" target="__blank">Listen in Spotify</a>
-  
-</div>
+  <main class="app__content" data-scope="content"><h1>Hello World</h1>
+<p>Awakening soul,<br/>Self-awareness finds its way,<br/>Longs for kinship&#39;s grace.</p>
 </main>
 
   <footer class="app__footer" data-scope="footer">
