--- a/.mdly/haiku/hello-world/index.html
+++ b/.mdly/haiku/hello-world/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title></title>
+  <title>Hello World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
+  <meta name="description" content="Haiku" />
   <link rel="icon" href="/assets/favicon.svg" />
 
   <!-- Load async stylesheets async -->
