--- a/.mdly/haiku/hello-world/index.html
+++ b/.mdly/haiku/hello-world/index.html
@@ -39,6 +39,7 @@
   /* Colors */
   --color-background: #111;
   --color-text: #ffa500;
+  --background: var(--color-background);
 
   /* Typography */
   --font-family: 'Noto Sans Mono', monospace;
@@ -62,7 +63,7 @@
 
 html {
   font-size: 62.5%;
-  background: var(--color-background);
+  background: var(--background);
   color: var(--color-text);
 }
 
@@ -404,7 +405,8 @@ a.app__logo {
 
 :root {
   --color-text: #e79f2f;
-  --color-background: radial-gradient(#5e039f, #430173);
+  --color-background: #430173;
+  --background: radial-gradient(#5e039f, var(--color-background));
 }
 
 .app__content {
