--- a/.mdly/index/index.html
+++ b/.mdly/index/index.html
@@ -421,9 +421,8 @@ a.app__logo {
   </header>
 
   <main class="app__content" data-scope="content"><ul>
+<li><a href="/lorem-ipsum/">Lorem Ipsum (Markdown) ✓</a></li>
 <li><a href="/haiku/hello-world">Hello World (Haiku) ✓</a></li>
-<li><a href="/playlist/0110/">0110 (Playlist)</a></li>
-<li><a href="/lorem-ipsum/">Lorem Ipsum (Post)</a></li>
 </ul>
 </main>
 
